footer fixes (text align and stroke decoration)
fixed styling in footer (silly comma misplaced in css, and added
alignment).

--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ a:active {
 }
 
 .nav-footer {
-	text-align: left;
+	text-align: right;
 }
 
 .nav-footer a,
@@ -229,7 +229,7 @@ a:active {
     margin-bottom: auto;
 }
 
-.to-top
+.to-top,
 .to-top:link,
 .to-top:visited {
     text-decoration: none;
@@ -314,9 +314,10 @@ a:active {
     padding-top: 2.5rem; 
     }
 
+}
+
 @media only screen and (min-width: 60em) {
    	    
-  	
-    
+  	  
 }
     
